--- a/templates/rooms.mustache
+++ b/templates/rooms.mustache
@@ -15,7 +15,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template mod_attendance/rooms
+    @template mod_presence/rooms
 
     Example context (json):
     {
