--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.path-mod-attendance .attbtn {
+.path-mod-presence .attbtn {
     border: 1px solid #aaa;
     border-radius: 5px;
     margin-left: 2px;
@@ -6,129 +6,129 @@
     padding: 5px;
 }
 
-.path-mod-attendance .attcurbtn {
+.path-mod-presence .attcurbtn {
     margin-left: 2px;
     margin-right: 2px;
     padding: 5px;
 }
 
-.path-mod-attendance .attfiltercontrols {
+.path-mod-presence .attfiltercontrols {
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     width: 90%;
 }
 
-.path-mod-attendance .attfiltercontrols #currentdate {
+.path-mod-presence .attfiltercontrols #currentdate {
     display: inline;
 }
 
-.path-mod-attendance .attwidth {
+.path-mod-presence .attwidth {
     margin: auto;
 }
 
-.path-mod-attendance .userwithoutenrol,
-.path-mod-attendance .userwithoutenrol a {
+.path-mod-presence .userwithoutenrol,
+.path-mod-presence .userwithoutenrol a {
     color: gray;
 }
 
-.path-mod-attendance .userwithoutdata,
-.path-mod-attendance .userwithoutdata a {
+.path-mod-presence .userwithoutdata,
+.path-mod-presence .userwithoutdata a {
     color: red;
 }
 
-.path-mod-attendance .takelist td {
+.path-mod-presence .takelist td {
     vertical-align: middle;
 }
 
-.path-mod-attendance .takelist .userpicture {
+.path-mod-presence .takelist .userpicture {
     margin: 0 3px;
     vertical-align: middle;
 }
 
-.path-mod-attendance .takegrid input {
+.path-mod-presence .takegrid input {
     margin: 0 3px 0 6px;
 }
 
-.path-mod-attendance .takegrid .fullname {
+.path-mod-presence .takegrid .fullname {
     font-size: 0.8em;
 }
 
-.path-mod-attendance table.controls {
+.path-mod-presence table.controls {
     text-align: center;
     width: 100%;
 }
 
-.path-mod-attendance table.controls tr {
+.path-mod-presence table.controls tr {
     vertical-align: top;
 }
 
-.path-mod-attendance table.controls td.right,
-.path-mod-attendance table.controls td.left {
+.path-mod-presence table.controls td.right,
+.path-mod-presence table.controls td.left {
     padding: 4px;
 }
 
-.path-mod-attendance table.controls .right {
+.path-mod-presence table.controls .right {
     text-align: right;
 }
 /* for IE7*/
-.path-mod-attendance .filtercontrols td {
+.path-mod-presence .filtercontrols td {
     padding: 6px;
 }
 
-.path-mod-attendance .takecontrols {
+.path-mod-presence .takecontrols {
     margin: 0 auto 20px auto;
     width: 800px;
 }
-.path-mod-attendance .takecontrols table {
+.path-mod-presence .takecontrols table {
     margin: 0 auto;
 }
-.path-mod-attendance .takecontrols .c0 {
+.path-mod-presence .takecontrols .c0 {
     text-align: left;
     width: 500px;
 }
-.path-mod-attendance .takecontrols .c1 {
+.path-mod-presence .takecontrols .c1 {
     text-align: right;
 }
 
-.path-mod-attendance .inline,
-.path-mod-attendance .inline form,
-.path-mod-attendance .inline div {
+.path-mod-presence .inline,
+.path-mod-presence .inline form,
+.path-mod-presence .inline div {
     display: inline;
 }
 
-.path-mod-attendance table.userinfobox {
+.path-mod-presence table.userinfobox {
     border: 1px solid #eee;
     padding: 0;
 }
-.path-mod-attendance table.userinfobox td.left {
+.path-mod-presence table.userinfobox td.left {
     background-color: #eee;
     padding: 30px 10px;
 }
-.path-mod-attendance table.attlist td.c0 {
+.path-mod-presence table.attlist td.c0 {
     text-align: right;
 }
 
-#page-mod-attendance-preferences .generalbox {
+#page-mod-presence-preferences .generalbox {
     text-align: center;
 }
 
-.path-mod-attendance .attsessions_manage_table .action-icon img.smallicon {
+.path-mod-presence .presencesessions_manage_table .action-icon img.smallicon {
     margin-left: 5px;
 }
-#page-mod-attendance-sessions input[type="checkbox"] {
+#page-mod-presence-sessions input[type="checkbox"] {
     margin-right: 2px;
 }
 
-.path-mod-attendance .setallstatuses {
+.path-mod-presence .setallstatuses {
     text-align: right;
 }
 
-.path-mod-attendance .remarkholder {
+.path-mod-presence .remarkholder {
     position: relative;
 }
 
-.path-mod-attendance .remarkholder .remarkcontent {
+.path-mod-presence .remarkholder .remarkcontent {
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 3px;
@@ -142,127 +142,127 @@
     z-index: 5000;
 }
 
-.path-mod-attendance .remarkholder:hover .remarkcontent {
+.path-mod-presence .remarkholder:hover .remarkcontent {
     display: inline-block;
 }
 
-.path-mod-attendance .attendancestatus-P {
+.path-mod-presence .presencestatus-P {
     color: green;
 }
 
-.path-mod-attendance .attendancestatus-E {
+.path-mod-presence .presencestatus-E {
     color: #00aee3;
 }
 
-.path-mod-attendance .attendancestatus-L {
+.path-mod-presence .presencestatus-L {
     color: #f7931e;
 }
 
-.path-mod-attendance .attendancestatus-A {
+.path-mod-presence .presencestatus-A {
     color: red;
 }
 
-.path-mod-attendance .attreport .contrast {
+.path-mod-presence .attreport .contrast {
     background-color: #eaeaea;
 }
 
-.path-mod-attendance .attreport .center {
+.path-mod-presence .attreport .center {
     text-align: center;
 }
 
-.path-mod-attendance .attreport .left {
+.path-mod-presence .attreport .left {
     text-align: left;
 }
 
-.path-mod-attendance .attreport .bottom {
+.path-mod-presence .attreport .bottom {
     vertical-align: bottom;
 }
 
-.path-mod-attendance .attreport .nowrap {
+.path-mod-presence .attreport .nowrap {
     white-space: nowrap;
 }
 
-.path-mod-attendance .attreport .narrow {
+.path-mod-presence .attreport .narrow {
     width: 1px;
 }
 
-.path-mod-attendance .attreport img.userpicture {
+.path-mod-presence .attreport img.userpicture {
     max-width: inherit;
 }
 
-.path-mod-attendance .student-password {
+.path-mod-presence .student-password {
     font-size: x-large;
     text-align: center;
 }
-.path-mod-attendance .ungraded {
+.path-mod-presence .ungraded {
     font-size: smaller;
     font-style: italic;
 }
-#page-mod-attendance-sessions .statusgroup .statusdesc {
+#page-mod-presence-sessions .statusgroup .statusdesc {
     margin-right: 12px;
 }
 
-#page-mod-attendance-view .averageattendance {
+#page-mod-presence-view .averagepresence {
     font-weight: bold;
 }
 
-#page-mod-attendance-preferences .form-control {
+#page-mod-presence-preferences .form-control {
     width: inherit;
     display: inherit;
 }
 
 @media (max-width: 767px) {
-    .path-mod-attendance .remarkscol {
+    .path-mod-presence .remarkscol {
         display: none;
     }
 
-    .path-mod-attendance .statusgroup .form-check-inline {
+    .path-mod-presence .statusgroup .form-check-inline {
         display: block;
         padding-top: 10px;
         padding-bottom: 10px;
     }
 
-    #page-mod-attendance-view .colatt {
+    #page-mod-presence-view .colatt {
         display: none;
     }
 
-    .path-mod-attendance .attfiltercontrols,
-    .path-mod-attendance .attwidth {
+    .path-mod-presence .attfiltercontrols,
+    .path-mod-presence .attwidth {
         width: 100%;
     }
 }
 
 @media (max-width: 480px) {
-    .path-mod-attendance .desccol {
+    .path-mod-presence .desccol {
         display: none;
     }
 
-    .path-mod-attendance .pointscol {
+    .path-mod-presence .pointscol {
         display: none;
     }
 
-    .path-mod-attendance .attfiltercontrols #currentdate {
+    .path-mod-presence .attfiltercontrols #currentdate {
         display: none;
     }
 
-    #page-mod-attendance-view .colsessionscompleted,
-    #page-mod-attendance-view .colpointssessionscompleted {
+    #page-mod-presence-view .colsessionscompleted,
+    #page-mod-presence-view .colpointssessionscompleted {
         display: none;
     }
 }
 
-#page-mod-attendance-report div[role=main] {
+#page-mod-presence-report div[role=main] {
     position: relative;
 }
 
-#page-mod-attendance-report .attendancereporttable {
+#page-mod-presence-report .presencereporttable {
     overflow-x: scroll;
     overflow-y: visible;
     padding: 0;
     margin-left: 180px;
 }
 
-#page-mod-attendance-report .attendancereporttable .headcol {
+#page-mod-presence-report .presencereporttable .headcol {
     position: absolute;
     width: 200px;
     left: 0;
@@ -270,11 +270,11 @@
     border-top-width: 1px;
 }
 
-#page-mod-attendance-report .attendancereporttable .headcol input[type='checkbox'] {
+#page-mod-presence-report .presencereporttable .headcol input[type='checkbox'] {
     margin-right: 4px;
 
 }
 
-.attendancereporttable img.icon {
+.presencereporttable img.icon {
     padding-left: 5px;
 }
