Add some text to header of qr code page.

--- a/styles.css
+++ b/styles.css
@@ -298,5 +298,9 @@
 }
 
 .attendancereporttable img.icon {
+    padding-left: 5px;
+}
+#page-mod-attendance-password .qrcodevalid,
+#page-mod-attendance-password .qrcodeheader {
     font-size: larger;
 }
