--- a/styles.css
+++ b/styles.css
@@ -304,3 +304,8 @@
 #page-mod-attendance-password .qrcodeheader {
     font-size: larger;
 }
+
+#page-mod-attendance-manage .addsession {
+    display: inline-block;
+    padding-left: 1em;
+}
