SLIN1 mod_attendance: removed non-existent row-y class.

--- a/templates/filter_controls.mustache
+++ b/templates/filter_controls.mustache
@@ -51,7 +51,7 @@
         </div>
     {{/modeallsessions}}
 
-    <div class="row row-y justify-content-between">
+    <div class="row justify-content-between">
         {{#sessgroupselector}}
             <div class="sessgroupselector col-auto my-2">
                 {{{sessgroupselector}}}
