SLIN1 mod_attendance: preference to toggle off left auto margins quicker for pagination/view controls.

--- a/templates/filter_controls.mustache
+++ b/templates/filter_controls.mustache
@@ -68,12 +68,12 @@
             </div>
         {{/curdatecontrols}}
         {{#pagingcontrols}}
-            <div class="pagingcontrols col-auto d-flex align-items-center p-2 ml-md-auto">
+            <div class="pagingcontrols col-auto d-flex align-items-center p-2 ml-xl-auto">
                 {{{pagingcontrols}}}
             </div>
         {{/pagingcontrols}}
         {{#viewcontrols}}
-            <div class="viewcontrols col-auto p-2 {{^pagingcontrols}}ml-md-auto{{/pagingcontrols}}">
+            <div class="viewcontrols col-auto p-2 {{^pagingcontrols}}ml-xl-auto{{/pagingcontrols}}">
                 {{{viewcontrols}}}
             </div>
         {{/viewcontrols}}
